[package]
name = "msbaker-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp2040-pac = "0.4.0"
rp2040-hal="0.8.0"
rp2040-boot2= "0.2"
rp2040-hal-macros = "0.1.0"
critical-section = "1.0.0"

[features]
rt = ["rp2040-pac/rt"]
rom-func-cache = []
disable-intrinsics = []
rom-v2-intrinsics = []
rp2040-e5 = []
critical-section-impl = ["critical-section/restore-state-u8"]

